# yagbe

./: .gitignore  README.md  Z80CribSheet.doc  Z80InstrCribSheet.doc
.github/workflows/: jekyll.yml
cpp/: CMakeLists.txt  TODO.txt
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/yagbe-lib/: CMakeLists.txt  decompiler.cpp  decompiler.h  emulator.cpp  emulator.h
cpp/test/: CMakeLists.txt
cpp/test/resources/ROMs/: Tetris.hexdump
cpp/test/src/: decompiler_tests.cpp  emulator_tests.cpp
docs/: Gemfile  _config.yml  notes.txt
docs/_includes/head/: custom.html
docs/_posts/: 2025-04-05-c-est-parti.markdown  2025-04-05-welcome-to-jekyll.markdown  2025-04-06-mise-en-place-du-projet-cpp-avec-google-tests.md
docs/assets/images/favicons/: site.webmanifest
resources/GB boot ROM (gb_bios.bin)/: dmg0_rom.hexdump  gb_bios.txt
